--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <p>sadfasdgfsfgs</p>
     <p>fdgvsdfgdafsg</p>
     <h2>if you like pinakoladas</h2>
+    <nav><a href=""></a>
+        </a><a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+    </nav>
 
 </body>
 
