--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
     <p>fdgvsdfgdafsg</p>
     <h2>if you like pinakoladas</h2>
     <p>adsfasdfasdfasdse</p>
-    <nav><a href=""></a>
-        </a><a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <p>lol</p>
-    </nav>
+    <h2>jestem zmeczona w sumie to napilabym sie kawki jakiejs pyszniutkiej mmmm</h2>
 
 </body>
 
